--- a/playbook.yml
+++ b/playbook.yml
@@ -66,7 +66,7 @@
         owner: ubuntu
         group: ubuntu
     - name: SLEEP now !!!
-      shell: sleep 15 && sudo docker exec -i khalid-mysql mysql --user=root --password=123456 < script
+      shell: sleep 15 && sudo docker exec -i mysql mysql --user=root --password=123456 < script
 
     - name: Re-create a Spring container
       docker_container:
